--- a/fe/src/theme-customizer/theme-customizer.component.html
+++ b/fe/src/theme-customizer/theme-customizer.component.html
@@ -1,11 +1,11 @@
 <div class="btn-group mr-3" role="group">
     <div class="btn-group mr-3" data-frmdb-select="i" role="menu">
-        <button class="btn" id="frmdb-editor-color-palette-select" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <button class="btn text-nowrap" id="frmdb-editor-color-palette-select" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="la la-square" data-frmdb-attr="style.color::selectedColor.primary"></i>
             <i class="la la-square" data-frmdb-attr="style.color::selectedColor.secondary"></i>
         </button>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="frmdb-editor-color-palette-select">
-            <a class="dropdown-item" data-frmdb-table="colors[]">
+            <a class="dropdown-item text-nowrap" data-frmdb-table="colors[]">
                 <i class="la la-square" data-frmdb-attr="style.color::colors[].primary"></i> Primary color 
                 <i class="la la-square" data-frmdb-attr="style.color::colors[].secondary"></i> Secondary color        
             </a>
