wysiwyg editor working

--- a/fe/src/highlight-box/highlight-box.component.html
+++ b/fe/src/highlight-box/highlight-box.component.html
@@ -17,7 +17,7 @@
         <a class="btn" id="clone-btn" href="javascript:void(0)" title="Clone element"><i class="la la-copy"></i></a>
         <a class="btn" id="delete-btn" href="javascript:void(0)" title="Remove element"><i class="la la-trash"></i></a>
     </div>
-    <div class="actions editing d-none">
+    <div class="actions editing">
         <a class="btn" id="bold-btn" href="javascript:void(0)" title="Bold"><i><strong>B</strong></i></a>
         <a class="btn" id="italic-btn" href="javascript:void(0)" title="Italic"><i>I</i></a>
         <a class="btn" id="underline-btn" href="javascript:void(0)" title="Underline"><u>u</u></a>
