highlight should not work in preview mode

--- a/fe/src/highlight-box/highlight-box.component.html
+++ b/fe/src/highlight-box/highlight-box.component.html
@@ -3,7 +3,7 @@
 <div id="highlight" class="box">
     <div class="name"></div>
     <div class="actions bottom">
-        <a id="add-section-btn" href="javascript:void(0)" title="Add element"><i class="la la-plus-circle"></i></a>
+        <!-- <a id="add-section-btn" href="javascript:void(0)" title="Add element"><i class="la la-plus-circle"></i></a> -->
     </div>
 </div>
 
@@ -15,6 +15,7 @@
         <a class="btn" id="down-btn" href="javascript:void(0)" title="Move element down"><i class="la la-arrow-down"></i></a>
         <a class="btn" id="edit-btn" href="javascript:void(0)" title="Edit element"><i class="la la-edit"></i></a>
         <a class="btn" id="clone-btn" href="javascript:void(0)" title="Clone element"><i class="la la-copy"></i></a>
+        <a class="btn" id="add-btn" href="javascript:void(0)" title="Add element"><i class="la la-plus"></i></a>
         <a class="btn" id="delete-btn" href="javascript:void(0)" title="Remove element"><i class="la la-trash"></i></a>
     </div>
     <div class="actions editing">
