fix highlight tagName and actions for elements at the top of the page

--- a/fe/src/highlight-box/highlight-box.component.html
+++ b/fe/src/highlight-box/highlight-box.component.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/formuladb-static/icons/line-awesome/css/line-awesome.min.css">
 
 <div id="highlight" class="box">
-    <div class="name"></div>
+    <div class="name">X</div>
     <div class="actions bottom">
         <!-- <a id="add-section-btn" href="javascript:void(0)" title="Add element"><i class="la la-plus-circle"></i></a> -->
     </div>
