--- a/fe/src/highlight-box/highlight-box.component.html
+++ b/fe/src/highlight-box/highlight-box.component.html
@@ -1,7 +1,12 @@
 <link rel="stylesheet" href="/formuladb-static/icons/line-awesome/css/line-awesome.min.css">
 
+<div id="grand-parent-highlight" class="box">
+</div>
+<div id="parent-highlight" class="box">
+</div>
+
 <div id="highlight" class="box">
-    <div class="name">X</div>
+    <div class="name"></div>
     <div class="actions bottom">
         <!-- <a id="add-section-btn" href="javascript:void(0)" title="Add element"><i class="la la-plus-circle"></i></a> -->
     </div>
@@ -15,7 +20,8 @@
         <a class="btn" id="down-btn" href="javascript:void(0)" title="Move element down"><i class="la la-arrow-down"></i></a>
         <a class="btn" id="edit-btn" href="javascript:void(0)" title="Edit element"><i class="la la-edit"></i></a>
         <a class="btn" id="clone-btn" href="javascript:void(0)" title="Clone element"><i class="la la-copy"></i></a>
-        <a class="btn" id="add-btn" href="javascript:void(0)" title="Add element"><i class="la la-plus"></i></a>
+        <a class="btn" id="add-inside-btn" href="javascript:void(0)" title="Add element inside"><i class="la la-plus-circle"></i></a>
+        <a class="btn" id="add-after-btn" href="javascript:void(0)" title="Add element after"><i class="la la-plus"></i></a>
         <a class="btn" id="delete-btn" href="javascript:void(0)" title="Remove element"><i class="la la-trash"></i></a>
     </div>
     <div class="actions editing">
