--- a/fe/src/highlight-box/highlight-box.component.html
+++ b/fe/src/highlight-box/highlight-box.component.html
@@ -14,15 +14,15 @@
 
 <div id="selected" class="box">
     <div class="actions selected">
-        <a class="btn" id="drag-btn" href="javascript:void(0)" title="Drag element"><i class="la la-arrows"></i></a>
-        <a class="btn" id="parent-btn" href="javascript:void(0)" title="Select parent"><i class="la la-level-down la-rotate-180"></i></a>
-        <a class="btn" id="up-btn" href="javascript:void(0)" title="Move element up"><i class="la la-arrow-up"></i></a>
-        <a class="btn" id="down-btn" href="javascript:void(0)" title="Move element down"><i class="la la-arrow-down"></i></a>
-        <a class="btn" id="edit-btn" href="javascript:void(0)" title="Edit element"><i class="la la-edit"></i></a>
-        <a class="btn" id="clone-btn" href="javascript:void(0)" title="Clone element"><i class="la la-copy"></i></a>
-        <a class="btn" id="add-inside-btn" href="javascript:void(0)" title="Add element inside"><i class="la la-plus-circle"></i></a>
-        <a class="btn" id="add-after-btn" href="javascript:void(0)" title="Add element after"><i class="la la-plus"></i></a>
-        <a class="btn" id="delete-btn" href="javascript:void(0)" title="Remove element"><i class="la la-trash"></i></a>
+        <a class="btn" data-frmdb-action="drag" href="javascript:void(0)" title="Drag element"><i class="la la-arrows"></i></a>
+        <a class="btn" data-frmdb-action="parent" href="javascript:void(0)" title="Select parent"><i class="la la-level-down la-rotate-180"></i></a>
+        <a class="btn" data-frmdb-action="up" href="javascript:void(0)" title="Move element up"><i class="la la-arrow-up"></i></a>
+        <a class="btn" data-frmdb-action="down" href="javascript:void(0)" title="Move element down"><i class="la la-arrow-down"></i></a>
+        <a class="btn" data-frmdb-action="edit" href="javascript:void(0)" title="Edit element"><i class="la la-edit"></i></a>
+        <a class="btn" data-frmdb-action="clone" href="javascript:void(0)" title="Clone element"><i class="la la-copy"></i></a>
+        <a class="btn" data-frmdb-action="add-inside" href="javascript:void(0)" title="Add element inside"><i class="la la-plus-circle"></i></a>
+        <a class="btn" data-frmdb-action="add-after" href="javascript:void(0)" title="Add element after"><i class="la la-plus"></i></a>
+        <a class="btn" data-frmdb-action="delete" href="javascript:void(0)" title="Remove element"><i class="la la-trash"></i></a>
     </div>
     <div class="actions editing">
         <a class="btn" id="bold-btn" href="javascript:void(0)" title="Bold"><i><strong>B</strong></i></a>
