--- a/fe/src/highlight-box/highlight-box.component.scss
+++ b/fe/src/highlight-box/highlight-box.component.scss
@@ -15,11 +15,11 @@
     }
 
     &#grand-parent-highlight {
-        border: 3px dotted yellow;
+        border: 3px dotted green;
     }
 
     &#parent-highlight {
-        border: 2px dotted red;
+        border: 2px dotted yellow;
     }
 
     &#selected {
