working: undo, redo, clone, up, down, delete, parent

--- a/fe/src/highlight-box/highlight-box.component.html
+++ b/fe/src/highlight-box/highlight-box.component.html
@@ -14,8 +14,8 @@
 
 <div id="selected" class="box">
     <div class="actions selected">
-        <a class="btn" data-frmdb-action="drag" href="javascript:void(0)" title="Drag element"><i class="la la-arrows"></i></a>
-        <a class="btn" data-frmdb-action="parent" href="javascript:void(0)" title="Select parent"><i class="la la-level-down la-rotate-180"></i></a>
+        <!-- <a class="btn" data-frmdb-action="drag" href="javascript:void(0)" title="Drag element"><i class="la la-arrows"></i></a> -->
+        <a class="btn" data-frmdb-action="parent" href="javascript:void(0)" title="Select parent element"><i class="la la-level-down la-rotate-180"></i></a>
         <a class="btn" data-frmdb-action="up" href="javascript:void(0)" title="Move element up"><i class="la la-arrow-up"></i></a>
         <a class="btn" data-frmdb-action="down" href="javascript:void(0)" title="Move element down"><i class="la la-arrow-down"></i></a>
         <a class="btn" data-frmdb-action="edit" href="javascript:void(0)" title="Edit element"><i class="la la-edit"></i></a>
