--- a/fe/src/highlight-box/highlight-box.component.html
+++ b/fe/src/highlight-box/highlight-box.component.html
@@ -6,7 +6,7 @@
 </div>
 
 <div id="highlight" class="box">
-    <div class="name"><span class="parent"></span> <span class="elem"></span></div>
+    <div class="name"><span class="grand-parent"></span> <span class="parent"></span> <span class="elem"></span></div>
     <div class="actions bottom">
         <!-- <a id="add-section-btn" href="javascript:void(0)" title="Add element"><i class="la la-plus-circle"></i></a> -->
     </div>
@@ -16,7 +16,6 @@
 </div>
 <div id="selected" class="box">
     <div class="actions selected">
-        <div class="name"><span class="parent"></span> <span class="elem"></span></div>
         <!-- <a class="btn" data-frmdb-action="drag" href="javascript:void(0)" title="Drag element"><i class="la la-arrows"></i></a> -->
         <a class="btn" data-frmdb-action="parent" href="javascript:void(0)" title="Select parent element"><i class="la la-level-down la-rotate-180"></i></a>
         <a class="btn" data-frmdb-action="up" href="javascript:void(0)" title="Move element up"><i class="la la-arrow-up"></i></a>
