fix highlight/selected on iframe scroll and resize; working on component editor

--- a/fe/src/component-editor/component-editor.component.html
+++ b/fe/src/component-editor/component-editor.component.html
@@ -14,9 +14,9 @@
 </ul>
 
 <div class="tab-content h-100 overflow-auto">
-    <div class="tab-pane fade show active" id="left-panel-tab-content" role="tabpanel" aria-labelledby="content-tab">
+    <form class="tab-pane fade show active accordion" id="left-panel-tab-content" role="tabpanel" aria-labelledby="content-tab">
         <div class="mt-4 text-center">Click on an element to edit.</div>
-    </div>
+    </form>
 
     <div class="tab-pane fade show" id="left-panel-tab-style" role="tabpanel" aria-labelledby="style-tab">
     </div>
