--- a/fe/src/component-editor/component-editor.component.html
+++ b/fe/src/component-editor/component-editor.component.html
@@ -1,18 +1,18 @@
 <ul class="nav nav-tabs nav-fill flex-nowrap" id="properties-tabs" role="tablist">
     <li class="nav-item content-tab">
-        <a class="nav-link active py-1" data-toggle="tab" href="#left-panel-tab-content" role="tab" aria-controls="components" aria-selected="true">
+        <a class="nav-link active py-1" title="Page Element Content" data-toggle="tab" href="#left-panel-tab-content" role="tab" aria-controls="components" aria-selected="true">
             <i class="la la-lg la-cube"></i>
             Content
         </a>
     </li>
     <li class="nav-item style-tab">
-        <a class="nav-link py-1" data-toggle="tab" href="#left-panel-tab-style" role="tab" aria-controls="blocks" aria-selected="false">
+        <a class="nav-link py-1" title="Page Element Style" data-toggle="tab" href="#left-panel-tab-style" role="tab" aria-controls="blocks" aria-selected="false">
             <i class="la la-lg la-image"></i>
             Style
         </a>
     </li>
     <li class="nav-item style-tab">
-        <a class="nav-link py-1" data-toggle="tab" href="#left-panel-tab-data" role="tab" aria-controls="blocks" aria-selected="false">
+        <a class="nav-link py-1" title="Page Element Data Binding" data-toggle="tab" href="#left-panel-tab-data" role="tab" aria-controls="blocks" aria-selected="false">
             <i class="la la-lg la-database"></i>
             Data
         </a>
