more work on add element for card-decks with img overlay

--- a/fe/src/highlight-box/highlight-box.component.html
+++ b/fe/src/highlight-box/highlight-box.component.html
@@ -6,7 +6,7 @@
 </div>
 
 <div id="highlight" class="box">
-    <div class="name"><span class="grand-parent"></span> <span class="parent"></span> <span class="elem"></span></div>
+    <div class="name"><span class="elem"></span> <span class="parent"></span> <span class="grand-parent"></span></div>
     <div class="actions bottom">
         <!-- <a id="add-section-btn" href="javascript:void(0)" title="Add element"><i class="la la-plus-circle"></i></a> -->
     </div>
