--- a/fe/src/highlight-box/highlight-box.component.scss
+++ b/fe/src/highlight-box/highlight-box.component.scss
@@ -1,3 +1,9 @@
+:host.names-hidden {
+    .box .name {
+        display: none;
+    }
+}
+
 :host([disabled="true"]) .box {
     display: none !important;
 }
