fix: newly added element must be selected after

--- a/fe/src/frmdb-editor/add-element.component.scss
+++ b/fe/src/frmdb-editor/add-element.component.scss
@@ -1,11 +1,4 @@
-@import "../../../formuladb-themes/node_modules/bootstrap/scss/functions";
-@import "../../../formuladb-themes/node_modules/bootstrap/scss/variables";
-@import "../../../formuladb-themes/node_modules/bootstrap/scss/mixins";
-@import "../../../formuladb-themes/node_modules/bootstrap/scss/utilities";
-@import "../../../formuladb-themes/node_modules/bootstrap/scss/nav";
-@import "../../../formuladb-themes/node_modules/bootstrap/scss/navbar";
-
-:host {
+frmdb-add-element {
     position: absolute;
     top: 5vh;
     left: 5vw;
@@ -16,9 +9,9 @@
     display: none;
     background-color: white;
     border: 1px solid black;
-    border-radius: $border-radius;
-    box-shadow: $box-shadow-lg;
-    
+    border-radius: 10px;
+    box-shadow: 5vw;
+
     iframe {
         width: 100%;
         height: 100%;
