added sibling highlight and selector, needed to select img for card-img-overlay

--- a/fe/src/frmdb-editor/frmdb-editor.directive.scss
+++ b/fe/src/frmdb-editor/frmdb-editor.directive.scss
@@ -75,7 +75,7 @@ $logo-height: 29px;
 $tables-height: 28px;
 $pages-height: 28px;
 
-frmdb-dom-tree {
+.left-panel-tree {
     height: $dom-tree-heigth;
     display: block;
 }
