--- a/fe/src/highlight-box/highlight-box.component.html
+++ b/fe/src/highlight-box/highlight-box.component.html
@@ -4,9 +4,15 @@
 </div>
 <div id="parent-highlight" class="box">
 </div>
+<div id="prev-highlight" class="box">
+</div>
 
 <div id="highlight" class="box">
-    <div class="name"><span class="elem"></span> <span class="parent"></span> <span class="grand-parent"></span></div>
+    <div class="name">
+        <!-- <div class="grand-parent"></div>
+        <div class="parent"></div> -->
+        <div class="elem"></div>
+    </div>
     <div class="actions bottom">
         <!-- <a id="add-section-btn" href="javascript:void(0)" title="Add element"><i class="la la-plus-circle"></i></a> -->
     </div>
@@ -18,6 +24,7 @@
     <div class="actions selected">
         <!-- <a class="btn" data-frmdb-action="drag" href="javascript:void(0)" title="Drag element"><i class="la la-arrows"></i></a> -->
         <a class="btn" data-frmdb-action="parent" href="javascript:void(0)" title="Select parent element"><i class="la la-level-down la-rotate-180"></i></a>
+        <a class="btn" data-frmdb-action="prev" href="javascript:void(0)" title="Select previous sibling element"><i class="la la-level-down la-rotate-90"></i></a>
         <a class="btn" data-frmdb-action="up" href="javascript:void(0)" title="Move element up"><i class="la la-arrow-up"></i></a>
         <a class="btn" data-frmdb-action="down" href="javascript:void(0)" title="Move element down"><i class="la la-arrow-down"></i></a>
         <a class="btn" data-frmdb-action="edit" href="javascript:void(0)" title="Edit element"><i class="la la-edit"></i></a>
