moved icons to a dedicate project

--- a/fe/src/formula-editor/formula-editor.component.html
+++ b/fe/src/formula-editor/formula-editor.component.html
@@ -1,12 +1,12 @@
-<div class="formula-code-editor d-flex">
-    <button id="toggle-formula-editor" class="btn btn-secondary px-1" title="Enable/Disable Formula Editor">
-        <i class=" frmdb-i-frmdb"></i>
+<div class="formula-code-editor">
+    <button id="toggle-formula-editor" class="btn" title="Enable/Disable Formula Editor">
+        <i class="frmdb-i-frmdb"></i>
     </button>
     <div class="editor">
       <textarea class="editor-textarea" readonly spellcheck="false"></textarea>
       <div class="editor-formatted-overlay"></div>
     </div>
-    <button id="apply-formula-changes" class="btn btn-light px-1" disabled title="Apply Changes">
-        <i class="la la-check-circle"></i>
-    </button>    
+    <button id="apply-formula-changes" class="btn" disabled title="Apply Changes">
+        <i class="frmdb-i-check-circle"></i>
+    </button>
 </div>
