--- a/fe/src/frmdb-editor/add-element.component.html
+++ b/fe/src/frmdb-editor/add-element.component.html
@@ -1,16 +1,30 @@
-<nav>
-    <div class="nav nav-tabs" id="nav-tab" role="tablist">
-        <a class="nav-item nav-link active" id="BasicComponents">Basic Components</a>
-        <a class="nav-item nav-link" id="Headers">Headers</a>
-        <a class="nav-item nav-link" id="Cards">Cards</a>
-        <a class="nav-item nav-link" id="FZPatterns">F/Z/ZigZag Patters</a>
-        <a class="nav-item nav-link" id="Media">Media</a>
-        <a class="nav-item nav-link" id="Magazine">Magazine</a>
-        <a class="nav-item nav-link" id="Widgets">Widgets</a>
-        <a class="nav-item nav-link" id="Dashboard">Dashboard</a>
+<div class="modal fade modal-xl" id="intro-video-modal" style="width: 100vw; max-width: 100vw" tabindex="-1" role="dialog">
+    <div class="modal-dialog mt-3" role="document" style="width: 96vw; max-width: 96vw">
+        <div class="modal-content" style="width: 96vw; max-width: 96vw">
+            <div class="modal-header">
+                <p class="modal-title text-primary"><i class="la la-lg la-video"></i> Intro Video</p>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true"><small><i class="la la-close"></i></small></span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <nav>
+                    <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                        <a class="nav-item nav-link active" id="BasicComponents">Basic Components</a>
+                        <a class="nav-item nav-link" id="Headers">Headers</a>
+                        <a class="nav-item nav-link" id="Cards">Cards</a>
+                        <a class="nav-item nav-link" id="FZPatterns">F/Z/ZigZag Patters</a>
+                        <a class="nav-item nav-link" id="Media">Media</a>
+                        <a class="nav-item nav-link" id="Magazine">Magazine</a>
+                        <a class="nav-item nav-link" id="Widgets">Widgets</a>
+                        <a class="nav-item nav-link" id="Dashboard">Dashboard</a>
+                    </div>
+                </nav>
+                <div id="examples-canvas" class="w-100 h-100 position-relative overflow-hidden">
+                    <iframe src="/formuladb-themes/BasicComponents.html"></iframe>
+                    <frmdb-highlight-box class="names-hidden"></frmdb-highlight-box>
+                </div>
+            </div>
+        </div>
     </div>
-</nav>
-<div id="examples-canvas" class="w-100 h-100 position-relative overflow-hidden">
-    <iframe src="/formuladb-themes/BasicComponents.html"></iframe>
-    <frmdb-highlight-box class="names-hidden"></frmdb-highlight-box>
 </div>
