using bootstrap modal for add page element popup

--- a/fe/src/formula-editor/formula-editor.component.scss
+++ b/fe/src/formula-editor/formula-editor.component.scss
@@ -1,4 +1,4 @@
-@import '../../../formuladb/icons/icons.css';
+@import "/formuladb-icons/editor/icons.css";
 
 .formula-code-editor {
     min-width: 50vw;
