--- a/fe/src/frmdb-editor/add-element.component.html
+++ b/fe/src/frmdb-editor/add-element.component.html
@@ -1,8 +1,8 @@
-<div class="modal fade modal-xl" id="intro-video-modal" style="width: 100vw; max-width: 100vw" tabindex="-1" role="dialog">
+<div class="modal fade modal-xl" id="add-element-modal" style="width: 100vw; max-width: 100vw" tabindex="-1" role="dialog">
     <div class="modal-dialog mt-3" role="document" style="width: 96vw; max-width: 96vw">
         <div class="modal-content" style="width: 96vw; max-width: 96vw">
             <div class="modal-header">
-                <p class="modal-title text-primary"><i class="la la-lg la-video"></i> Intro Video</p>
+                <p class="modal-title text-primary"><i class="la la-lg la-video"></i> Choose Page Element to Add</p>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true"><small><i class="la la-close"></i></small></span>
                 </button>
