started img-editor

--- a/fe/src/frmdb-editor/element-tree.component.html
+++ b/fe/src/frmdb-editor/element-tree.component.html
@@ -1,12 +1,12 @@
 <ul>
-    <li class="grand-parent" data-frmdb-value="grandParentElName"></li>
+    <li class="grand-parent" data-frmdb-value="grandParentElName" title="Grandparent Element Box"></li>
     <li>
         <ul>
-            <li class="parent" data-frmdb-value="parentElName"></li>
+            <li class="parent" data-frmdb-value="parentElName" title="Parent Element Box"></li>
             <li>
                 <ul>
-                    <li class="prev" data-frmdb-value="prevName"></li>
-                    <li class="elem" data-frmdb-value="elName"></li>
+                    <li class="prev" data-frmdb-value="prevName" title="Previous Sibling Element Box"></li>
+                    <li class="elem" data-frmdb-value="elName" title="Current Element Box"></li>
                 </ul>
             </li>
         </ul>
