--- a/fe/src/frmdb-editor/frmdb-editor.directive.scss
+++ b/fe/src/frmdb-editor/frmdb-editor.directive.scss
@@ -56,6 +56,7 @@ $grid-gutter-width:           5px;
 @import "../../../formuladb-themes/node_modules/bootstrap/scss/bootstrap";
 @import "../../../formuladb-themes/frmdb/dropdown";
 @import "../../../formuladb-themes/frmdb/card";
+@import "../../../formuladb-themes/frmdb/utilities/scrollbar";
 
 // @import "../../../formuladb-themes/node_modules/font-awesome/scss/font-awesome.scss";
 // @import "../../../node_modules/line-awesome/css/line-awesome.css";
