--- a/fe/src/frmdb-editor/img-editor.component.html
+++ b/fe/src/frmdb-editor/img-editor.component.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog mt-3" role="document" style="width: 96vw; max-width: 96vw">
         <div class="modal-content" style="width: 96vw; max-width: 96vw">
             <div class="modal-header">
-                <p class="modal-title text-primary"><i class="la la-lg la-video"></i> Choose Page Element to Add</p>
+                <p class="modal-title text-primary"><i class="la la-lg la-video"></i> Choose Image</p>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true"><small><i class="la la-close"></i></small></span>
                 </button>
@@ -14,7 +14,6 @@
                         <a class="nav-item nav-link active" id="BasicComponents">Free Public Images</a>
                     </div>
                 </nav>
-
             </div>
         </div>
     </div>
