change image works #119

--- a/fe/src/frmdb-editor/icon-editor.component.html
+++ b/fe/src/frmdb-editor/icon-editor.component.html
@@ -2,13 +2,26 @@
     <div class="modal-dialog mt-3" role="document" style="width: 96vw; max-width: 96vw">
         <div class="modal-content" style="width: 96vw; max-width: 96vw">
             <div class="modal-header">
-                <p class="modal-title text-primary"><i class="la la-lg la-video"></i> Choose Icon</p>
+                <p class="modal-title text-primary"><i class="la la-fonticons"></i> Choose Icon</p>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true"><small><i class="la la-close"></i></small></span>
                 </button>
             </div>
             <div class="modal-body">
-                ICONS HERE
+                <nav>
+                    <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                        <a class="nav-item nav-link active" data-toggle="tab" href="#Uploaded_Icons">Free Icons</a>
+                        <a class="nav-item nav-link" data-toggle="tab" href="#Paid_Icons">Paid Icons</a>
+                    </div>
+                </nav>
+                <div class="tab-content">
+                    <div class="tab-pane active" id="Uploaded_Icons" role="tabpanel" aria-labelledby="home-tab">
+
+                    </div>
+                    <div class="tab-pane" id="Paid_Icons" role="tabpanel" aria-labelledby="profile-tab">
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
