--- a/fe/src/frmdb-editor/frmdb-editor.directive.scss
+++ b/fe/src/frmdb-editor/frmdb-editor.directive.scss
@@ -47,13 +47,16 @@ $font-size-sm:                $font-size-base * .875;
 $label-margin-bottom:         .15rem;
 
 $spacer: 0.5rem;
-$nav-link-padding-y: .1rem;
-$nav-link-padding-x: .2rem;
+$nav-link-padding-y: .25rem;
+$nav-link-padding-x: .5rem;
+$modal-header-padding-y: .25rem;
+$modal-header-padding-x: .5rem;
 $input-btn-padding-y:         .1rem;
 $input-btn-padding-x:         .1rem;
 $grid-gutter-width:           5px;
 
 @import "../../../formuladb-themes/node_modules/bootstrap/scss/bootstrap";
+
 @import "../../../formuladb-themes/frmdb/dropdown";
 @import "../../../formuladb-themes/frmdb/card";
 @import "../../../formuladb-themes/frmdb/utilities/scrollbar";
