fix undo for image properties

--- a/fe/src/frmdb-editor/img-editor.component.html
+++ b/fe/src/frmdb-editor/img-editor.component.html
@@ -7,7 +7,7 @@
                     <span aria-hidden="true"><small><i class="la la-close"></i></small></span>
                 </button>
             </div>
-            <div class="modal-body h-100">
+            <div class="modal-body h-100 overflow-hidden mb-4">
                 <nav>
                     <div class="nav nav-tabs" id="nav-tab" role="tablist">
                         <a class="nav-item nav-link active" data-toggle="tab" href="#Uploaded_Images">Your Uploaded Images</a>
