added themes and icons submodules

--- a/fe/src/data-grid/data-grid.component.scss
+++ b/fe/src/data-grid/data-grid.component.scss
@@ -4,8 +4,8 @@
  */
 
 
-@import "../../../formuladb-editor/scss/line-awesome";
-@import "../../../formuladb-editor/scss/bootstrap";
+@import "../../../formuladb-env/scss/line-awesome";
+@import "~/bootstrap/bootstrap";
 @import "~ag-grid-community/dist/styles/ag-grid";
 @import "~ag-grid-community/dist/styles/ag-theme-balham";
 
